--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,15 @@
     <ul>
         <li> <%= link_to "Store Home", store_path %> </li>
         <% if !!@cart %>
+        	<li> <%= link_to "Hello #{current_user.email}", edit_user_registration_path %></li>
+        	
           <li> <%= link_to "Cart", cart_path(current_cart) %></li>
+          
+          <li> <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+          
+        <% else %>
+        	<li> <%= link_to "Sign in", user_session_path %></li>
+        	<li> <%= link_to "Sign up", new_user_registration_path %></li>
         <% end %>
     </ul>
 </nav>
