--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<%= render 'layouts/header' %>
+<%= render 'layouts/header', :current_cart => @cart %>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
