--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -12,4 +12,7 @@
 
 <p>Order total: <strong><%= number_to_currency(current_cart.total) %></strong> </p>
 
-<%= button_to 'Checkout', checkout_path %>
+<% if !current_cart.submitted? %>
+	<%= button_to 'Checkout', checkout_path %>
+<% end %>
+
