--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,11 @@
 <nav class="">
     <ul>
         <li> <%= link_to "Store Home", store_path %> </li>
-        <% if !!@cart %>
-        	<li> <%= link_to "Hello #{current_user.email}", edit_user_registration_path %></li>
-        	
-          <li> <%= link_to "Cart", cart_path(current_cart) %></li>
+        <% if current_user %>
+          <li> <%= link_to "Hello #{current_user.email}", edit_user_registration_path %></li>
+          <% if !!@cart %>
+            <li> <%= link_to "Cart", cart_path(current_cart) %></li>
+          <% end %>
           
           <li> <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
           
