--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,12 +5,12 @@
 <% end %>
 
 <% current_cart.line_items.each do |line_item| %>
-  <p><%= link_to line_item.item.title, item_path(line_item.item) %> | <%= number_to_currency(line_item.item.price) %> | Quantity: <%= line_item.quantity %> | <% if line_item.item.inventory < 5 %>
+  <p><%= link_to line_item.item.title, item_path(line_item.item) %> | <%= number_to_currency(line_item.item.printable_price) %> | Quantity: <%= line_item.quantity %> | <% if line_item.item.inventory < 5 %>
     <strong>There are only <%= line_item.item.inventory %> left in stock.</strong>
   <% end %> </p>
 <% end %>
 
-<p>Order total: <strong><%= number_to_currency(current_cart.total) %></strong> </p>
+<p>Order total: <strong><%= number_to_currency(current_cart.printable_total) %></strong> </p>
 
 <% if !current_cart.submitted? %>
 	<%= button_to 'Checkout', checkout_path %>
